# qlc-config

./: .gitignore  AGENTS.md  BEAT_DETECTION.md  BEAT_DETECTION_RESEARCH.md  INTEGRATION.md  Makefile  README.md  audio_reactive.py  beat-midi.service  beat_to_midi.py  osc_control.py  plp-beat.service  preprocess_rekordbox.py  pyproject.toml  qlc-service.sh  qlcplus.service  spotlight.qxw  ws_control.py
plp_beat_service/: __init__.py  audio.py  benchmark.py  cli.py  confidence.py  debug_server.py  file_source.py  midi.py  onset.py  osc.py  peaks.py  plp.py  service.py  state.py  tempogram.py
plp_beat_service/static/: compare.html  debug.html  intervals.html
qlcplus/: __init__.py  client.py
